Visibility set for input fields in dropdown - fixes keychain issue on reload

--- a/src/scss/partials/components/_dropdown.scss
+++ b/src/scss/partials/components/_dropdown.scss
@@ -33,10 +33,16 @@
 	position: absolute;
 	top: 100%;
 	z-index: 1000;
+	input{
+		visibility: hidden;
+	}
 	&.active{
 		opacity: 1 !important;
 		visibility: visible !important;
 		pointer-events: auto;
+		input{
+			visibility: visible;
+		}
 	}
 }
 .dropdown-item{
